--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-hb": "^2.6.5",
     "gulp-htmlmin": "^1.2.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-live-server": "0.0.30",
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
